// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> renders at each size renders at size 200, multiLine=false 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 14px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 200, multiLine=true 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: auto;
  white-space: normal;
  font-size: 14px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 300, multiLine=false 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 300, multiLine=true 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: auto;
  white-space: normal;
  font-size: 16px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 400, multiLine=false 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 18px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 400, multiLine=true 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: auto;
  white-space: normal;
  font-size: 18px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 500, multiLine=false 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 20px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 500, multiLine=true 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: auto;
  white-space: normal;
  font-size: 20px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 600, multiLine=false 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 24px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 600, multiLine=true 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: auto;
  white-space: normal;
  font-size: 24px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 700, multiLine=false 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 32px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 700, multiLine=true 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: auto;
  white-space: normal;
  font-size: 32px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 16px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 800, multiLine=false 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 40px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 24px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;

exports[`<Heading /> renders at each size renders at size 800, multiLine=true 1`] = `
.emotion-0 {
  -webkit-font-smoothing: antialiased;
  color: rgb(77,83,86);
  font-family: sans-serif;
  font-family: Lato;
  font-style: normal;
  color: rgb(61,66,81);
  font-weight: 700;
  line-height: 1.25;
  margin: 0;
  overflow: auto;
  white-space: normal;
  font-size: 40px;
}

*:not(style) ~ .emotion-0 {
  margin-top: 24px;
}

<h2
  class="example-class emotion-0"
  data-example="testdata"
  data-item="othertest"
>
  Some example text.
</h2>
`;
